--- a/src/main/resources/templates/embalagem/embalagem_lista.html
+++ b/src/main/resources/templates/embalagem/embalagem_lista.html
@@ -42,7 +42,6 @@
         </tbody>
     </table>
     </div>
-    	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
