--- a/src/main/resources/templates/embalagem/embalagem_propriedade.html
+++ b/src/main/resources/templates/embalagem/embalagem_propriedade.html
@@ -30,27 +30,56 @@
             <p>Embalagem e Propriedade</p>
         </div>
         <!-- Propriedade Selection -->
+        <h4>Selecionar Embalagens</h4>
        <form action="#" method="post" th:action="@{/embalagens/associar}">
    				 <input type="hidden" id="propriedadeId" th:name="propriedadeId" th:value="${propriedade.id}">
   					<div>
-            		   <p id="selecaoAtual" th:text="'Seleção Atual: ' + ${propriedade.codigo} + ' - ' + ${propriedade.produto.nome} + ' ' 
+            		   <p id="selecaoAtual" th:text="${propriedade.codigo} + ' - ' + ${propriedade.produto.nome} + ' ' 
             		   + ${propriedade.variedade} + ' ' + ${propriedade.subvariedade}
             		   +		    ' ' + ${propriedade.classificacao} + ' ' + ${propriedade.peso} + ' ' + ${propriedade.unidade}">Seleção Atual:</p>
           		  </div>
     <!-- Embalagens Selection -->
-    <div class="mb-3">
-    <h4>Selecionar Embalagens</h4>
-    <div class="overflow-auto" style="max-height: 300px;">
-        <div th:each="embalagem : ${embalagens}" class="form-check">
-            <input class="form-check-input" type="checkbox" th:name="embalagens" th:value="${embalagem.id}" th:id="'embalagem-' + ${embalagem.id}">
-            <label class="form-check-label" th:for="'embalagem-' + ${embalagem.id}" th:text="${embalagem.codigo}"></label>
+
+<div class="row">
+    <div class="col-md-6">
+        <div class="overflow-auto" style="max-height: 300px;">
+            <div th:each="embalagem, iterStat : ${embalagens}" 
+                 th:unless="${iterStat.index % 2 != 0}" class="form-check">
+                <input class="form-check-input" type="checkbox" 
+                    th:name="embalagens" 
+                    th:value="${embalagem.id}"
+                    th:id="'embalagem-' + ${embalagem.id}"
+                    th:checked="${#lists.contains(embalagensAssociadas, embalagem)}" />
+                <label class="form-check-label" th:for="'embalagem-' + ${embalagem.id}"
+                    th:text="${embalagem.codigo} + ' - ' + 
+                             ${embalagem.tipoEmbalagem} + ' - ' + 
+                             ${embalagem.peso} + ' ' + ${embalagem.unidadeMedida}"></label>
+            </div>
+        </div>
+    </div>
+    
+    <div class="col-md-6">
+        <div class="overflow-auto" style="max-height: 300px;">
+            <div th:each="embalagem, iterStat : ${embalagens}" 
+                 th:unless="${iterStat.index % 2 == 0}" class="form-check">
+                <input class="form-check-input" type="checkbox" 
+                    th:name="embalagens" 
+                    th:value="${embalagem.id}"
+                    th:id="'embalagem-' + ${embalagem.id}"
+                    th:checked="${#lists.contains(embalagensAssociadas, embalagem)}" />
+                <label class="form-check-label" th:for="'embalagem-' + ${embalagem.id}"
+                    th:text="${embalagem.codigo} + ' - ' + 
+                             ${embalagem.tipoEmbalagem} + ' - ' + 
+                             ${embalagem.peso} + ' ' + ${embalagem.unidadeMedida}"></label>
+            </div>
         </div>
     </div>
 </div>
-
-    <!-- Save Button -->
+<div class="mt-3">
     <button type="submit" class="btn btn-primary">Salvar</button>
+</div>
 </form>
+
     </div>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
      
