--- a/src/main/resources/templates/embalagem/embalagem_cadastro.html
+++ b/src/main/resources/templates/embalagem/embalagem_cadastro.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
@@ -16,7 +16,7 @@
 	<div class="container mt-4">
 		<h2 th:text="${embalagem.id} != null ? 'Editar Embalagem' : 'Nova Embalagem'"></h2>
 
-		<!-- Exibir mensagens de sucesso -->
+		Exibir mensagens de sucesso
 		<div th:if="${success}" class="alert alert-success mt-2" th:text="${success}"></div>
 
 		<div th:replace="~{alert}"></div>
@@ -24,7 +24,7 @@
 		<form th:action="@{/embalagens/salvar}" th:object="${embalagem}" method="post" class="mt-4">
 
 			<div th:replace="~{validacao :: validacao}"></div>
-			<!-- Exibir erros globais do formulário -->
+			Exibir erros globais do formulário
 			<div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
 				<p>Existem erros no formulário:</p>
 				<ul>
@@ -61,7 +61,7 @@
 			</div>
 
 			<div class="d-flex justify-content-between mt-4">
-				<a th:href="@{/embalagens}" class="btn btn-secondary">Voltar</a>
+				<a th:href="@{/embalagens/listar}" class="btn btn-secondary">Voltar</a>
 				<button type="submit" class="btn btn-primary">Salvar</button>
 			</div>
 		</form>
@@ -70,4 +70,4 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
-</html>
+</html> -->
