--- a/src/main/resources/templates/productSearchModal.html
+++ b/src/main/resources/templates/productSearchModal.html
@@ -18,9 +18,12 @@
             <table id="productResultsTable">
                 <thead>
                     <tr>
-                        <th>Nome</th>
+                        <th>Produto</th>
                         <th>Código</th>
-                        <th>Ação</th>
+                        <th>Variedade</th>
+                        <th>Subvariedade</th>
+                        <th>Classificação</th>
+                       
                     </tr>
                 </thead>
                 <tbody id="productResultsBody">
