--- a/src/main/resources/templates/embalagem/embalagem_lista.html
+++ b/src/main/resources/templates/embalagem/embalagem_lista.html
@@ -3,25 +3,28 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-	<title>Sistema DEVCEASA - Embalagens</title>
-	<style>
-		/* Reduzindo a largura e o tamanho da fonte */
-		.table-sm td, .table-sm th, .table-sm input, .table-sm select {
-			font-size: 12px; /* Tamanho menor da fonte */
-			padding: 4px; /* Espaçamento reduzido */
-		}
-		.table-sm button {
-			font-size: 10px; /* Botões menores */
-		}
-		/* Definindo o scroll para a tabela */
-		.scrollable-table {
-			max-height: 500px; /* Altura máxima da área rolável */
-			overflow-y: auto; /* Scroll vertical */
-		}
-	</style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+	rel="stylesheet">
+<title>Sistema DEVCEASA - Embalagens</title>
+<style>
+/* Reduzindo a largura e o tamanho da fonte */
+.table-sm td, .table-sm th, .table-sm input, .table-sm select {
+	font-size: 12px; /* Tamanho menor da fonte */
+	padding: 4px; /* Espaçamento reduzido */
+}
+
+.table-sm button {
+	font-size: 10px; /* Botões menores */
+}
+/* Definindo o scroll para a tabela */
+.scrollable-table {
+	max-height: 500px; /* Altura máxima da área rolável */
+	overflow-y: auto; /* Scroll vertical */
+}
+</style>
 </head>
 
 <body>
@@ -31,44 +34,44 @@
 	<div class="container mt-4">
 		<h2>Sistema de embalagens para produtos</h2>
 		<div th:replace="~{alert}"></div>
-<form th:action="@{/embalagens/salvar}" method="post">
-		<table class="table table-striped table-bordered table-sm">
-			<thead class="table-dark">
-				<tr>
-					<th>Código</th>
-					<th>Tipo</th>
-					<th>Peso</th>
-					<th>Unidade Medida</th>
-					<th>Ações</th>
-				</tr>
-			</thead>
+		<form th:action="@{/embalagens/salvar}" method="post">
+			<table class="table table-striped table-bordered table-sm">
+				<thead class="table-dark">
+					<tr>
+						<th>Código</th>
+						<th>Tipo</th>
+						<th>Peso</th>
+						<th>Unidade Medida</th>
+						<th>Ações</th>
+					</tr>
+				</thead>
 
-			<tbody>
-				<!-- Linha para Inserção de Nova Embalagem -->
-				<tr>
-					
-						<td><input type="text" name="codigo" class="form-control" placeholder="Novo Código" required></td>
-						<td>
-							<select name="tipoEmbalagem" class="form-select" required>
+				<tbody>
+					<!-- Linha para Inserção de Nova Embalagem -->
+					<tr>
+
+						<td><input type="text" name="codigo" class="form-control"
+							placeholder="Novo Código" required></td>
+						<td><select name="tipoEmbalagem" class="form-select" required>
 								<option value="" disable selected>Selecione Tipo</option>
-								<option th:each="tipo : ${tipos}" th:value="${tipo}" th:text="${tipo}"></option>
-							</select>
-						</td>
-						<td><input type="number" name="peso" class="form-control" step="0.1" placeholder="Novo Peso" required></td>
-						<td>
-							<select name="unidadeMedida" class="form-select" required>
+								<option th:each="tipo : ${tipos}" th:value="${tipo}"
+									th:text="${tipo}"></option>
+						</select></td>
+						<td><input type="number" name="peso" class="form-control"
+							step="0.1" placeholder="Novo Peso" required></td>
+						<td><select name="unidadeMedida" class="form-select" required>
 								<option value="" disable selected>Selecione Unidade</option>
-								<option th:each="unidade : ${unidades}" th:value="${unidade}" th:text="${unidade}"></option>
-							</select>
-						</td>
+								<option th:each="unidade : ${unidades}" th:value="${unidade}"
+									th:text="${unidade}"></option>
+						</select></td>
 						<td>
 							<button type="submit" class="btn btn-primary btn-sm">Salvar</button>
 						</td>
-					
-				</tr>
-			</tbody>
-		</table>
-</form>
+
+					</tr>
+				</tbody>
+			</table>
+		</form>
 		<!-- Tabela com Scroll para as embalagens -->
 		<div class="scrollable-table">
 			<table class="table table-striped table-bordered table-sm">
@@ -79,19 +82,48 @@
 						<td th:text="${embalagem.peso}"></td>
 						<td th:text="${embalagem.unidadeMedida}"></td>
 						<td>
-							<a th:href="@{/embalagens/excluir/{id}(id=${embalagem.id})}" 
-							   class="btn btn-danger btn-sm" 
-							   sec:authorize="hasRole('ROLE_MANAGER')" 
-							   onclick="return confirm('Tem certeza que deseja excluir esta embalagem?');">Excluir</a>
+   							 <button type="button" class="btn btn-info btn-sm"
+  						     	 th:attr="onclick='verPropriedades(' + ${embalagem.id} + ')'">
+  						     	 Ver Propriedades</button>
 						</td>
+						<td><a
+							th:href="@{/embalagens/excluir/{id}(id=${embalagem.id})}"
+							class="btn btn-danger btn-sm"
+							sec:authorize="hasRole('ROLE_MANAGER')"
+							onclick="return confirm('Tem certeza que deseja excluir esta embalagem?');">Excluir embalagem</a>
+						</td>
+
 					</tr>
 				</tbody>
 			</table>
 		</div>
-
+<!-- Modal -->
 	</div>
+	<div class="modal fade" id="propriedadesModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Produtos Associados</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <ul id="propriedadesList" class="list-group">
+          <!-- Propriedades associadas serão carregadas aqui -->
+        </ul>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End of modal -->
 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<script src="/script/embalagem.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"> </script>
+
+
 </body>
 
 </html>
