--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -59,19 +59,13 @@
                          <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/cotacoes/relatorio-mensal}">Média Mensal Valor Comum </a></li>
                     </ul>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Controle de Feiras
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/feiras/cadastrar}">Todas as feiras</a></li>
-                    </ul>
-                </li>
+                
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Cotação
                     </a>
                     <ul class="dropdown-menu">
+                    	<li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/feiras/cadastrar}">Controle de feiras</a></li>	
                         <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/cotacoes/pesquisar}">Cotação</a></li>
                         <li><a class="dropdown-item" th:href="@{/cotacoes/por-data}">Consultar</a></li>
                     </ul>
@@ -83,16 +77,17 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{/admin/users}">Gerenciamento de Usuários</a></li>
                     </ul>
-                 <li class="nav-item dropdown">                
-                	
-                    <a class="nav-link dropdown-toggle"  href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nota</a>
-                     <ul class="dropdown-menu">
-                    	<li><a class="dropdown-item"  sec:authorize="hasRole('ADMIN')" th:href="@{/notas/cadastrar}">Cadastrar Notas</a> </li> 
-                    	<li><a class="dropdown-item"  sec:authorize="hasRole('ADMIN')" th:href="@{/notas/listar}">Listar Notas</a> </li> 
-                    
+                
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Portaria
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/portarias/listar}">Controle de Portaria</a></li>
                     </ul>
-                  
                 </li>
+                
+               
                 
                </ul>
             
