--- a/src/main/resources/templates/nota/nota_cadastro.html
+++ b/src/main/resources/templates/nota/nota_cadastro.html
@@ -15,6 +15,8 @@
 
     <div class="container">
         <h2 class="titulo">Cadastro de Nota Fiscal</h2>
+        
+        	<div th:replace="~{alert}"></div>
 
         <form id="notaForm" th:action="@{/notas/salvar}" th:object="${nota}" method="post">
             <div class="row">
