--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -84,6 +84,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/portarias/listar}">Controle de Portaria</a></li>
+                  		 <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/notas/listar}">Listar todas as notas</a></li>
                     </ul>
                 </li>
                 
