--- a/src/main/resources/templates/produto/grafico_produtos.html
+++ b/src/main/resources/templates/produto/grafico_produtos.html
@@ -1,22 +1,67 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.tymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
-    <title>Gráfico de Rosca</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Gráfico de Quantidade por data</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+   
+   
     <style>
         #myDoughnutChart {
-            width: 400px;
-            height: 400px;
+            width: 600px;
+            height: 600px;
         }
         .chartjs-datalabel {
             font-size: 12px; /* Ajuste o tamanho da fonte conforme necessário */
             color: #000000; /* Cor preta */
             font-weight: bold;
         }
+        .titulo {
+         font-size: 24px; /* Ajuste o tamanho da fonte conforme necessário */
+            color: #000000; /* Cor preta */
+            font-weight: bold;
+            text-align: center;
+        }
+       
+        
     </style>
 </head>
+
+
 <body>
+
+<div id="navmenu" th:insert="~{navbar :: menu-principal}"> </div>
+
+<div class="container mt-3">
+<div id="textoDoGrafico" class="titulo">SIMECC - SISTEMA INTEGRADO DE MERCADO E ESTATÍSTICA DA CEASA\CAMPINAS</div>
+    <form method="GET" action="/" class="form-inline">
+        <div class="row">
+            <div class="col-auto">
+                <label for="startDate" class="form-label small">Data de Início:</label>
+                <input type="date" id="startDate" name="startDate" class="form-control form-control-sm" value="[[${startDate}]]">
+            </div>
+            <div class="col-auto">
+                <label for="endDate" class="form-label small">Data Final:</label>
+                <input type="date" id="endDate" name="endDate" class="form-control form-control-sm" value="[[${endDate}]]">
+            </div>
+            <div class="col-auto">
+                <button type="submit" class="btn btn-primary btn-sm mt-4">Atualizar Gráfico</button>
+            </div>
+        </div>
+    </form>
+
+    <!-- Mostrando as datas selecionadas -->
+    <div class="mt-3">
+        <p><strong>dados extraídos das notas fiscais entre as datas de : </strong> [[${#temporals.format(startDate, 'dd-MM-yyyy')}]] até [[${#temporals.format(endDate,'dd-MM-yyyy')}]]</p>
+    </div>
+</div>
+
+<div id = "myChart">
     <canvas id="myDoughnutChart"></canvas>
     <script th:inline="javascript">
         var data = /*[[${produtosDTO}]]*/ '[[${produtosDTO}]]';
@@ -58,5 +103,6 @@
             plugins: [ChartDataLabels]
         });
     </script>
+    </div>
 </body>
 </html>
