--- a/src/main/resources/templates/produto/grafico_produtos.html
+++ b/src/main/resources/templates/produto/grafico_produtos.html
@@ -38,7 +38,7 @@
 <div id="navmenu" th:insert="~{navbar :: menu-principal}"> </div>
 
 <div class="container mt-3">
-<div id="textoDoGrafico" class="titulo">SIMECC - SISTEMA INTEGRADO DE MERCADO E ESTATÍSTICA DA CEASA\CAMPINAS</div>
+<div id="textoDoGrafico" class="titulo">SIMECC - SISTEMA INTEGRADO DE MERCADO E ESTATÍSTICA DA CEASA CAMPINAS</div>
     <form method="GET" action="/" class="form-inline">
         <div class="row">
             <div class="col-auto">
