--- a/src/main/resources/templates/propriedade/propriedade_listar.html
+++ b/src/main/resources/templates/propriedade/propriedade_listar.html
@@ -37,6 +37,7 @@
                         <th>Produto</th>
                         <th>Id</th>
                         <th>Código</th>
+                        <th>Código Anterior</th>
                         <th>Variedade</th>
                         <th>Subvariedade</th>
                         <th>Classificacao</th>
@@ -51,6 +52,7 @@
                         <td th:text="${prop.produto.nome}"></td>
                         <td th:text="${prop.id}"></td>
                         <td th:text="${prop.codigo}"></td>
+                        <td th:text="${prop.codigoAnterior}"></td>
                         <td th:text="${prop.variedade}"></td>
                         <td th:text="${prop.subvariedade}"></td>
                         <td th:text="${prop.classificacao}"></td>
